# cpu-cooler-simulator

./: LICENSE  README.md  coolest.py  main.py
calculations_module/: LICENSE  MANIFEST.in  README.md  constants.toml  setup.cfg
calculations_module/calculations/: __init__.py  utilities.py
